@@ -1,4 +1,5 @@
 [dev_2.11]
+    - Backports from 2.80: Fix #250: No hard line breaks after 70 chars in serialized JabRef meta data
     - Backports from 2.80: Fix #325: Deactivating AutoCompletion crashes EntryEditor
 2.11
     - Backports from 2.80: Bug fix in #193: sometimes IEEEXplore stalls during fetch
